syntax = "proto3";

option java_package = "com.google.pso";
// Causes top-level messages, enums, and services to be defined at the package level
option java_multiple_files = true;

message Page {
  string file_id = 1;
  int32 page_index = 2;
  string page_md5 = 3;
}